--- a/views/list.ejs
+++ b/views/list.ejs
@@ -7,7 +7,7 @@
     <title>To Do List</title>
 </head>
 <body>
-    <h1>It is a weekday!</h1>
-    <p>That sucks! That means you have to work!</p>
+    <h1>It is a <%= kindOfDay %>!</h1>
+
 </body>
 </html>
