--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,15 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
-    <title>To Do List</title>
-</head>
-<body>
+<%- include("header") -%>
 
-<h1> <%= kindOfDay %> </h1>
+<h1> <%= listTitle %> </h1>
 
 <ul>
     <% for (var i=0; i<newListItems.length; i++) { %>
@@ -18,9 +9,8 @@
 </ul>
 
 <form class="" action="/" method="post">
-    <input type="text" name="newItem">
-    <button type="submit" name="button">Add</button>
+    <input type="text" name="newItem" autocomplete="off">
+    <button type="submit" name="list" value=<%= listTitle %>>Add</button>
 </form>
    
-</body>
-</html>
+<%- include("footer") -%>
